crates/graphql-orm/tests/ui/mssql_write_helper_unavailable.stderr
error[E0599]: no function or associated item named `create` found for struct `LegacyJob` in the current scope
  --> tests/ui/mssql_write_helper_unavailable.rs:16:24
   |
 5 | struct LegacyJob {
   | ---------------- function or associated item `create` not found for this struct
...
16 |     let _ = LegacyJob::create;
   |                        ^^^^^^ function or associated item not found in `LegacyJob`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `create`, perhaps you need to implement one of them:
           candidate #1: `CacheFactory`
           candidate #2: `ExtensionFactory`
           candidate #3: `async_graphql::CustomDirectiveFactory`
           candidate #4: `regex_syntax::hir::interval::Interval`
